step: Die spezifikation wurde angepasst. Aktualisiere die Sprite JPA-Entity, DTO, Rest Endpunkte und beispiele in examples/world_terrain.md